# LLNA_benchmarks

lbm/exe/: lbm_r_base.mytest-m64
lbm/run/: list
lbm/run/run_peak_refrate_lbt.0000/: speccmds.cmd  speccmds.out
lbm/run/run_peak_refrate_lbt.0001/: lbm_r_peak.lbt  speccmds.cmd  speccmds.out
lbm/src/: lbm.c  lbm.h  lbm_1d_array.h  main.c
miniMD_Intel/: README  atom.cpp  comm.cpp  force_eam.cpp  force_lj.cpp  integrate.cpp  ljs.cpp  neighbor.cpp  openmp.h  thermo.cpp  types.h
moldyn/: CMakeLists.txt  Makefile  baseline.txt  moldyn.c  moldyn.py  moldyn_avx.c  moldyn_oneshot.c  moldyn_sse.c  moldyn_test.c  moldyn_test1.c  moldyn_test2.c  plot.py  rc.txt
